@@ -19,6 +19,8 @@
     <dd><input type="text" id="ancestor-attribute"></dd>
     <dt><label for="frame-attribute">Frame elements</label></dt>
     <dd><input type="text" id="frame-attribute"></dd>
+    <dt><label for="frame-ancestor-attribute">Ancestors of the frames</label></dt>
+    <dd><input type="text" id="frame-ancestor-attribute"></dd>
   </dl>
 </div>
 <div>
