@@ -1,3 +1,13 @@
+2017-10-10  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/pages/options.js:
+	Define frameAncestorAttr variable.
+	Add frameAncestor property to defaultAttributes.
+	Modify this file. This file handle frameAncestor attribute.
+	
+	* tryXpath/pages/options.html:
+	Add frame-ancestor-attribute input field.
+
 2017-10-09  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_functions.js:
